# serializer version: 1
# name: test_decode_unknown_position[positions0]
  '2 is not the position of a category; the categories are [steel, aluminium].'
# ---
# name: test_decode_unknown_position[positions1]
  '-1 is not the position of a category; the categories are [steel, aluminium].'
# ---
# name: test_decode_unknown_position[positions2]
  '5 is not the position of a category; the categories are [steel, aluminium].'
# ---
# name: test_decode_unknown_position[positions3]
  '0.5 is not the position of a category; the categories are [steel, aluminium].'
# ---
# name: test_decode_unknown_position[positions4]
  'nan is not the position of a category; the categories are [steel, aluminium].'
# ---
# name: test_decode_unknown_position[positions5]
  '0.5 and 2 are not the position of a category; the categories are [steel, aluminium].'
# ---
# name: test_encode_unknown_label[labels0]
  "'gold' is not a category of the variable; the categories are [steel, aluminium]."
# ---
# name: test_encode_unknown_label[labels1]
  "'gold' is not a category of the variable; the categories are [steel, aluminium]."
# ---
# name: test_encode_unknown_label[labels2]
  '1 is not a category of the variable; the categories are [steel, aluminium].'
# ---
# name: test_encode_unknown_label[labels3]
  'None is not a category of the variable; the categories are [steel, aluminium].'
# ---
# name: test_filter_components_rejects_other_selections[components0]
  'A categorical variable is scalar; its size cannot be set to 0.'
# ---
# name: test_filter_components_rejects_other_selections[components1]
  'A categorical variable is scalar; its size cannot be set to 2.'
# ---
# name: test_filter_components_rejects_other_selections[components2]
  'A categorical variable is scalar, so its only component is 0; got 1.'
# ---
# name: test_filter_components_rejects_other_selections[components3]
  'A categorical variable is scalar, so its only component is 0; got 1.'
# ---
# name: test_normalization_mask_is_read_only
  'assignment destination is read-only'
# ---
# name: test_out_of_domain_messages
  "The following coordinate of variable 'x' is not the position of one of its categories [a, b]: 3 (index 0)."
# ---
# name: test_out_of_domain_messages.1
  'The variable x is categorical with the categories [a, b]; got the coordinate x[0] = 3, which is not the position of a category.'
# ---
# name: test_rejections[kwargs0]
  '''
  1 validation error for CategoricalVariable
    Value error, A categorical variable must have at least one category. [type=value_error, input_value={'categories': []}, input_type=dict]
      For further information visit https://errors.pydantic.dev/X.Y/v/value_error
  '''
# ---
# name: test_rejections[kwargs10]
  '''
  1 validation error for CategoricalVariable
  categories
    Field required [type=missing, input_value={}, input_type=dict]
      For further information visit https://errors.pydantic.dev/X.Y/v/missing
  '''
# ---
# name: test_rejections[kwargs1]
  '''
  1 validation error for CategoricalVariable
    Value error, A categorical variable must have at least one category. [type=value_error, input_value={'categories': ()}, input_type=dict]
      For further information visit https://errors.pydantic.dev/X.Y/v/value_error
  '''
# ---
# name: test_rejections[kwargs2]
  '''
  1 validation error for CategoricalVariable
    Value error, The following category appears several times: 'a'. [type=value_error, input_value={'categories': ['a', 'a']}, input_type=dict]
      For further information visit https://errors.pydantic.dev/X.Y/v/value_error
  '''
# ---
# name: test_rejections[kwargs3]
  '''
  1 validation error for CategoricalVariable
    Value error, The following categories appear several times: 'a' and 'b'. [type=value_error, input_value={'categories': ['a', 'b', 'a', 'b']}, input_type=dict]
      For further information visit https://errors.pydantic.dev/X.Y/v/value_error
  '''
# ---
# name: test_rejections[kwargs4]
  '''
  1 validation error for CategoricalVariable
  categories.1
    Input should be a valid string [type=string_type, input_value=1, input_type=int]
      For further information visit https://errors.pydantic.dev/X.Y/v/string_type
  '''
# ---
# name: test_rejections[kwargs5]
  '''
  2 validation errors for CategoricalVariable
  categories.0
    Input should be a valid string [type=string_type, input_value=1, input_type=int]
      For further information visit https://errors.pydantic.dev/X.Y/v/string_type
  categories.1
    Input should be a valid string [type=string_type, input_value=2, input_type=int]
      For further information visit https://errors.pydantic.dev/X.Y/v/string_type
  '''
# ---
# name: test_rejections[kwargs6]
  '''
  1 validation error for CategoricalVariable
  categories
    Input should be a valid tuple [type=tuple_type, input_value='ab', input_type=str]
      For further information visit https://errors.pydantic.dev/X.Y/v/tuple_type
  '''
# ---
# name: test_rejections[kwargs7]
  '''
  1 validation error for CategoricalVariable
  categories.0
    Input should be a valid string [type=string_type, input_value=None, input_type=NoneType]
      For further information visit https://errors.pydantic.dev/X.Y/v/string_type
  '''
# ---
# name: test_rejections[kwargs8]
  '''
  1 validation error for CategoricalVariable
    Value error, size is read-only; the input of a CategoricalVariable is categories. [type=value_error, input_value={'categories': ['a'], 'size': 2}, input_type=dict]
      For further information visit https://errors.pydantic.dev/X.Y/v/value_error
  '''
# ---
# name: test_rejections[kwargs9]
  '''
  1 validation error for CategoricalVariable
  lower_bound
    Extra inputs are not permitted [type=extra_forbidden, input_value=0, input_type=int]
      For further information visit https://errors.pydantic.dev/X.Y/v/extra_forbidden
  '''
# ---
